; ModuleID = '/home/carl/AnghaBench/TDengine/tests/examples/lua/extr_lua_connector.c_l_close_stream.c'
source_filename = "/home/carl/AnghaBench/TDengine/tests/examples/lua/extr_lua_connector.c_l_close_stream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cb_param = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @l_close_stream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @l_close_stream(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.cb_param*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.cb_param* @lua_touserdata(i32* %4, i32 1)
  store %struct.cb_param* %5, %struct.cb_param** %3, align 8
  %6 = load %struct.cb_param*, %struct.cb_param** %3, align 8
  %7 = getelementptr inbounds %struct.cb_param, %struct.cb_param* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @taos_close_stream(i32 %8)
  %10 = load %struct.cb_param*, %struct.cb_param** %3, align 8
  %11 = call i32 @free(%struct.cb_param* %10)
  ret i32 0
}

declare dso_local %struct.cb_param* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @taos_close_stream(i32) #1

declare dso_local i32 @free(%struct.cb_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
